--- a/vertx-gaia/vertx-co/src/main/resources/up/config/vertx-resolver.yml
+++ b/vertx-gaia/vertx-co/src/main/resources/up/config/vertx-resolver.yml
@@ -1,7 +1,7 @@
-default: io.vertx.up.uca.rs.mime.resolver.BufferResolver
+default: io.vertx.up.uca.rs.mime.resolver.DefaultResolver
 application:
   json: io.vertx.up.uca.rs.mime.resolver.JsonResolver
-  octet-stream: io.vertx.up.uca.rs.mime.resolver.FileResolver
-  x-www-form-urlencoded: io.vertx.up.uca.rs.mime.resolver.FileResolver
+  octet-stream: io.vertx.up.uca.rs.mime.resolver.BufferResolver
+  x-www-form-urlencoded: io.vertx.up.uca.rs.mime.resolver.XFormResolver
 multipart:
-  form-data: io.vertx.up.uca.rs.mime.resolver.FileResolver
+  form-data: io.vertx.up.uca.rs.mime.resolver.FormResolver
