--- a/pom.xml
+++ b/pom.xml
@@ -55,17 +55,18 @@
         </repository>
     </distributionManagement>
     <properties>
+        <!-- Java Projection Basic Configuration -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
         <encoding>UTF-8</encoding>
-        <jcabi.version>0.22.6</jcabi.version>
-        <!-- Vertx 3.9.0, For testing -->
+
+        <!-- Vertx Framework Version -->
         <vertx.version>3.9.0</vertx.version>
         <stack.version>3.9.0</stack.version>
 
+        <jcabi.version>0.22.6</jcabi.version>
         <jackson.version>2.9.10</jackson.version>
         <jackson.databind.version>2.9.10.3</jackson.databind.version>
-        <jws.version>2.1.1</jws.version>
         <jersey.version>2.30.1</jersey.version>
         <javax.el.version>3.0.1-b06</javax.el.version>
         <glassfish.el.version>3.0.1-b11</glassfish.el.version>
@@ -75,7 +76,7 @@
         <jooq.version>3.10.8</jooq.version>
         <vertx.jooq.version>2.4.1</vertx.jooq.version>
         <vertx.jooq.async.version>0.4</vertx.jooq.async.version>
-        <vertx.jooq.code.version>5.1.0</vertx.jooq.code.version>
+        <vertx.jooq.code.version>5.1.1</vertx.jooq.code.version>
         <mysql.version>8.0.19</mysql.version>
 
         <!-- Java Reflection -->
@@ -87,6 +88,7 @@
 
         <!-- Etcd -->
         <etcd.version>2.18.0</etcd.version>
+
         <!-- Bean Validation -->
         <hibernate.validator.version>6.1.2.Final</hibernate.validator.version>
 
@@ -96,6 +98,7 @@
         <scala.version>2.13.1</scala.version>
         <feign.version>8.18.0</feign.version>
         <guava.version>28.2-jre</guava.version>
+        <joda.version>2.10.5</joda.version>
         <codehaus.janino.version>3.2.1</codehaus.janino.version>
         <codehaus.mojo.version>1.18</codehaus.mojo.version>
         <ignite.version>2.8.0</ignite.version>
@@ -104,6 +107,7 @@
 
         <!-- elasticsearch version -->
         <elasticsearch.version>7.6.2</elasticsearch.version>
+
         <!-- neo4j search -->
         <neo4j.version>4.0.1</neo4j.version>
 
@@ -113,6 +117,7 @@
         <common.logging.version>1.2</common.logging.version>
         <common.net.version>3.6</common.net.version>
         <common.codec.version>1.14</common.codec.version>
+
         <http.async.client.version>4.1.4</http.async.client.version>
         <http.client.version>4.5.12</http.client.version>
         <http.core.version>4.4.13</http.core.version>
@@ -137,7 +142,11 @@
         <reactive.streams>1.0.3</reactive.streams>
 
         <!-- JSR -->
-        <jsr311.version>1.1.1</jsr311.version>
+        <!--
+            <jsr311.version>1.1.1</jsr311.version>          Replaced by Jersey-Common
+            <jws.version>2.1.1</jws.version>                Replaced by Jersey-Common
+        -->
+        <jsr311.version>2.1.6</jsr311.version>
         <jsr330.version>1</jsr330.version>
         <jsr303.version>2.0.1.Final</jsr303.version>
         <jcache.version>1.1.1</jcache.version>
@@ -554,12 +563,6 @@
                 <artifactId>animal-sniffer-annotations</artifactId>
                 <version>${codehaus.mojo.version}</version>
             </dependency>
-            <!-- http://mvnrepository.com/artifact/javax.ws.rs/javax.ws.rs-api -->
-            <dependency>
-                <groupId>javax.ws.rs</groupId>
-                <artifactId>javax.ws.rs-api</artifactId>
-                <version>${jws.version}</version>
-            </dependency>
             <!-- https://mvnrepository.com/artifact/org.hdrhistogram/HdrHistogram -->
             <dependency>
                 <groupId>org.hdrhistogram</groupId>
@@ -759,6 +762,12 @@
                 <groupId>org.glassfish.jersey.core</groupId>
                 <artifactId>jersey-common</artifactId>
                 <version>${jersey.version}</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/jakarta.ws.rs/jakarta.ws.rs-api -->
+            <dependency>
+                <groupId>jakarta.ws.rs</groupId>
+                <artifactId>jakarta.ws.rs-api</artifactId>
+                <version>${jsr311.version}</version>
             </dependency>
             <!-- http://mvnrepository.com/artifact/org.projectlombok/lombok -->
             <dependency>
@@ -988,6 +997,12 @@
                 <groupId>ch.raffael.markdown-doclet</groupId>
                 <artifactId>markdown-doclet</artifactId>
                 <version>${mdoclet.version}</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/joda-time/joda-time -->
+            <dependency>
+                <groupId>joda-time</groupId>
+                <artifactId>joda-time</artifactId>
+                <version>${joda.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
