--- a/vertx-ifx/pom.xml
+++ b/vertx-ifx/pom.xml
@@ -24,6 +24,7 @@
         <module>zero-ifx-redis</module>
         <module>zero-ifx-sms</module>
         <module>zero-ifx-neo4j</module>
+        <module>zero-ifx-shell</module>
     </modules>
     <dependencies>
         <dependency>
