--- a/vertx-import/pom.xml
+++ b/vertx-import/pom.xml
@@ -45,20 +45,6 @@
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
         </dependency>
-        <!--
-        <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>aspectjweaver</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>aspectjtools</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>aspectjrt</artifactId>
-        </dependency>
-        -->
         <!-- Switch to Up -->
         <dependency>
             <groupId>cn.vertxup</groupId>
@@ -215,6 +201,11 @@
             <dependency>
                 <groupId>cn.vertxup</groupId>
                 <artifactId>zero-ifx-neo4j</artifactId>
+                <version>${zero.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>cn.vertxup</groupId>
+                <artifactId>zero-ifx-shell</artifactId>
                 <version>${zero.version}</version>
             </dependency>
         </dependencies>
