--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
 
         <jcabi.version>0.22.6</jcabi.version>
         <jackson.version>2.11.0</jackson.version>
-        <jackson.extension.version>2.11.0.rc1</jackson.extension.version>
+        <jackson.extension.version>2.11.0</jackson.extension.version>
         <jersey.version>2.30.1</jersey.version>
         <javax.el.version>3.0.1-b06</javax.el.version>
         <glassfish.el.version>3.0.1-b11</glassfish.el.version>
@@ -77,7 +77,7 @@
         <vertx.jooq.version>2.4.1</vertx.jooq.version>
         <vertx.jooq.async.version>0.4</vertx.jooq.async.version>
         <vertx.jooq.code.version>5.1.1</vertx.jooq.code.version>
-        <mysql.version>8.0.19</mysql.version>
+        <mysql.version>8.0.20</mysql.version>
 
         <!-- Java Reflection -->
         <reflect.asm.version>1.11.9</reflect.asm.version>
