--- a/vertx-gaia/vertx-micro/pom.xml
+++ b/vertx-gaia/vertx-micro/pom.xml
@@ -66,6 +66,10 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+        <dependency>
             <groupId>io.vertx</groupId>
             <artifactId>vertx-grpc</artifactId>
             <exclusions>
