Add view visitant for form control

--- a/vertx-pin/zero-rbac/src/main/resources/plugin/sql/database.yml
+++ b/vertx-pin/zero-rbac/src/main/resources/plugin/sql/database.yml
@@ -31,6 +31,9 @@ databaseChangeLog:
       file: plugin/sql/rbac/S_ROLE.sql
       relativeToChangelogFile: false
   - include:
+      file: plugin/sql/rbac/S_VISITANT.sql
+      relativeToChangelogFile: false
+  - include:
       file: plugin/sql/rbac/S_VIEW.sql
       relativeToChangelogFile: false
   - include:
