--- a/vertx-pin/zero-rbac/src/main/resources/plugin/sql/rbac.yml
+++ b/vertx-pin/zero-rbac/src/main/resources/plugin/sql/rbac.yml
@@ -34,6 +34,9 @@ databaseChangeLog:
       file: plugin/sql/rbac/S_VIEW.sql
       relativeToChangelogFile: false
   - include:
+      file: plugin/sql/rbac/S_VISITANT.sql
+      relativeToChangelogFile: false
+  - include:
       file: plugin/sql/rbac/R_GROUP_ROLE.sql
       relativeToChangelogFile: false
   - include:
