--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>vertx-gaia</module>
         <module>vertx-pin</module>
         <module>vertx-ifx</module>
+        <module>zero-ifx-canal</module>
     </modules>
     <packaging>pom</packaging>
     <!-- License -->
@@ -143,7 +144,7 @@
         <hazelcast.version>3.12.4</hazelcast.version>
         <swagger.version>1.6.0</swagger.version>
         <error.prone.version>2.4.0</error.prone.version>
-        <reactive.streams>1.0.3</reactive.streams>
+        <reactive.streams.version>1.0.3</reactive.streams.version>
 
         <!-- JSR -->
         <!--
@@ -883,7 +884,7 @@
             <dependency>
                 <groupId>org.reactivestreams</groupId>
                 <artifactId>reactive-streams</artifactId>
-                <version>${reactive.streams}</version>
+                <version>${reactive.streams.version}</version>
             </dependency>
             <!-- https://mvnrepository.com/artifact/com.zaxxer/HikariCP -->
             <dependency>
