--- a/vertx-ifx/zero-ifx-neo4j/pom.xml
+++ b/vertx-ifx/zero-ifx-neo4j/pom.xml
@@ -15,6 +15,12 @@
         <dependency>
             <groupId>org.neo4j.driver</groupId>
             <artifactId>neo4j-java-driver</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.reactivestreams</groupId>
+                    <artifactId>reactive-streams</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 </project>
