--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,6 @@
         <module>vertx-gaia</module>
         <module>vertx-pin</module>
         <module>vertx-ifx</module>
-        <module>zero-ifx-canal</module>
     </modules>
     <packaging>pom</packaging>
     <!-- License -->
@@ -76,8 +75,8 @@
         <hikari.cp.version>3.4.5</hikari.cp.version>
         <jooq.version>3.10.8</jooq.version>
         <vertx.jooq.version>2.4.1</vertx.jooq.version>
+        <vertx.jooq.code.version>2.4.1</vertx.jooq.code.version>
         <vertx.jooq.async.version>0.4</vertx.jooq.async.version>
-        <vertx.jooq.code.version>5.2.0</vertx.jooq.code.version>
         <mysql.version>8.0.21</mysql.version>
 
         <!-- Java Reflection -->
@@ -131,6 +130,7 @@
         <protobuf.version>3.12.2</protobuf.version>
         <vertx.grpc.version>1.6.1</vertx.grpc.version>
         <grpc.version>1.32.1</grpc.version>
+        <gson.version>2.8.6</gson.version>
         <picoli.version>4.5.1</picoli.version>
 
         <!-- Yaml -->
@@ -487,6 +487,11 @@
                 <artifactId>jsr305</artifactId>
                 <version>${jsr305.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>${gson.version}</version>
+            </dependency>
             <!-- https://mvnrepository.com/artifact/io.grpc/grpc-context -->
             <dependency>
                 <groupId>io.grpc</groupId>
@@ -565,6 +570,11 @@
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-core</artifactId>
+                <version>${log4j2.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-api</artifactId>
                 <version>${log4j2.version}</version>
             </dependency>
             <!-- java rs -->
