--- a/vertx-import/pom.xml
+++ b/vertx-import/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>vertx-zero</artifactId>
         <groupId>cn.vertxup</groupId>
-        <version>0.5.4</version>
+        <version>0.6.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>vertx-import</artifactId>
@@ -15,7 +15,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
         <encoding>UTF-8</encoding>
-        <zero.version>0.5.4</zero.version>
+        <zero.version>0.6.0-SNAPSHOT</zero.version>
         <hazelcast.version>3.12.4</hazelcast.version>
         <maven.javadoc.skip>true</maven.javadoc.skip>
         <aspectj.version>1.9.6</aspectj.version>
