--- a/vertx-pin/pom.xml
+++ b/vertx-pin/pom.xml
@@ -42,6 +42,7 @@
         <dependency>
             <groupId>cn.vertxup</groupId>
             <artifactId>vertx-up</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
     <build>
