--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>vertx-pin</module>
         <module>vertx-ifx</module>
         <module>vertx-istio</module>
+        <module>vertx-synchro</module>
     </modules>
     <packaging>pom</packaging>
     <!-- License -->
