--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,7 @@
         <ignite.version>2.8.1</ignite.version>
         <mongodb.async.version>3.12.7</mongodb.async.version>
         <poi.version>4.1.2</poi.version>
+        <jedis.version>3.3.0</jedis.version>
 
         <!-- elasticsearch version -->
         <elasticsearch.version>7.7.1</elasticsearch.version>
@@ -281,6 +282,11 @@
             <dependency>
                 <groupId>io.vertx</groupId>
                 <artifactId>vertx-core</artifactId>
+                <version>${vertx.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.vertx</groupId>
+                <artifactId>vertx-sync</artifactId>
                 <version>${vertx.version}</version>
             </dependency>
             <dependency>
@@ -1076,6 +1082,12 @@
                 <groupId>org.apache.zookeeper</groupId>
                 <artifactId>zookeeper</artifactId>
                 <version>${zookeeper.version}</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
+            <dependency>
+                <groupId>redis.clients</groupId>
+                <artifactId>jedis</artifactId>
+                <version>${jedis.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
