--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
         </repository>
     </distributionManagement>
     <properties>
+        <!-- RC Version Ok -->
+        <jackson.version>2.12.0-rc1</jackson.version>
+        <jackson.extension.version>2.12.0-rc1</jackson.extension.version>
+        <protobuf.version>4.0.0-rc-2</protobuf.version>
+
         <!-- Java Projection Basic Configuration -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
@@ -66,11 +71,9 @@
         <stack.version>3.9.3</stack.version>
 
         <jcabi.version>0.22.6</jcabi.version>
-        <jackson.version>2.11.3</jackson.version>
-        <jackson.extension.version>2.11.3</jackson.extension.version>
         <jersey.version>2.30.1</jersey.version>
         <javax.el.version>3.0.1-b06</javax.el.version>
-        <glassfish.el.version>3.0.1-b11</glassfish.el.version>
+        <glassfish.el.version>3.0.1-b12</glassfish.el.version>
 
         <!-- Database Needed -->
         <hikari.cp.version>3.4.5</hikari.cp.version>
@@ -129,9 +132,8 @@
         <liquibase.version>3.8.9</liquibase.version>
 
         <!-- Rpc -->
-        <protobuf.version>3.12.2</protobuf.version>
         <vertx.grpc.version>1.6.1</vertx.grpc.version>
-        <grpc.version>1.32.1</grpc.version>
+        <grpc.version>1.32.2</grpc.version>
         <gson.version>2.8.6</gson.version>
         <picoli.version>4.5.1</picoli.version>
 
@@ -163,7 +165,7 @@
         <jsr338.version>2.2</jsr338.version>
 
         <!-- Testing -->
-        <junit.version>4.13</junit.version>
+        <junit.version>4.13.1</junit.version>
 
         <!-- AspectJ -->
         <aspectj.version>1.9.6</aspectj.version>
