--- a/vertx-pin/zero-ke/pom.xml
+++ b/vertx-pin/zero-ke/pom.xml
@@ -22,5 +22,10 @@
             <artifactId>zero-ifx-redis</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <!-- MySQL -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
     </dependencies>
 </project>
