--- a/pom.xml
+++ b/pom.xml
@@ -57,8 +57,8 @@
     </distributionManagement>
     <properties>
         <!-- RC Version Ok -->
-        <jackson.version>2.12.0-rc2</jackson.version>
-        <jackson.extension.version>2.12.0-rc2</jackson.extension.version>
+        <jackson.version>2.12.0</jackson.version>
+        <jackson.extension.version>2.12.0</jackson.extension.version>
         <protobuf.version>4.0.0-rc-2</protobuf.version>
 
         <!-- Java Projection Basic Configuration -->
@@ -99,7 +99,7 @@
         <jwt.version>3.11.0</jwt.version>
         <jetbrains.version>19.0.0</jetbrains.version>
         <guice.version>4.1.0</guice.version>
-        <scala.version>2.13.3</scala.version>
+        <scala.version>2.13.4</scala.version>
         <feign.version>8.18.0</feign.version>
         <guava.version>30.0-jre</guava.version>
         <joda.version>2.10.8</joda.version>
@@ -114,7 +114,7 @@
         <elasticsearch.version>7.10.0</elasticsearch.version>
 
         <!-- neo4j search -->
-        <neo4j.version>4.1.1</neo4j.version>
+        <neo4j.version>4.2.0</neo4j.version>
 
         <!-- Apache Common -->
         <common.jexl.version>3.1</common.jexl.version>
@@ -126,14 +126,14 @@
 
         <http.async.client.version>4.1.4</http.async.client.version>
         <http.client.version>4.5.13</http.client.version>
-        <http.core.version>4.4.13</http.core.version>
+        <http.core.version>4.4.14</http.core.version>
 
         <!-- Liquibase -->
         <liquibase.version>3.8.9</liquibase.version>
 
         <!-- Rpc -->
         <vertx.grpc.version>1.6.1</vertx.grpc.version>
-        <grpc.version>1.33.1</grpc.version>
+        <grpc.version>1.34.0</grpc.version>
         <gson.version>2.8.6</gson.version>
         <picoli.version>4.5.2</picoli.version>
 
