Pom upgrade for Mac Resolver Bug

--- a/pom.xml
+++ b/pom.xml
@@ -1016,6 +1016,7 @@
                 <groupId>io.netty</groupId>
                 <artifactId>netty-resolver-dns-native-macos</artifactId>
                 <version>${netty.version}</version>
+                <classifier>osx-x86_64</classifier>
             </dependency>
             <dependency>
                 <groupId>io.netty</groupId>
